--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "feather-icons": "^4.28.0",
     "filesize": "^6.1.0",
     "normalize.css": "^8.0.1",
+    "object-hash": "^2.1.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-router-dom": "^5.2.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
+    "@types/object-hash": "^1.3.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.8",
